test/trivial/deitz/test_var_decl_strange3.chpl
x = 12.0;
var x = y;
var y = x;

writeln(x);
writeln(y);
